2014-06-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/rllarsbi.f (rlLARSbi): got rid of warnings -- and many GOTOs

2014-06-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.92-0
	* R/nlrob.R (.nls.get.start, nlrob): now works with indexed vector parameters
	  -- FIXME: at ETH have testing code + example data -- unfinished!-- -- on nb-mm3 not

2014-04-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.91-1, released to CRAN

2014-04-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version, Date): 0.91-0, released to CRAN

2014-01-30  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.90-1, released to CRAN on 2014-01-30

2013-05-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (Mpsi, Mchi, Mwgt): now all work via .Call():
	is  9 x  faster for n ~ 4000, and a few NAs.

2013-05-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (MrhoInf): new, providing rho(Inf), i.e.,
	the scaling constant (rho |--> rho~ = chi)
	* R/lmrob.MM.R (Mpsi, Mchi, Mwgt): renamed, exported and documented,
	from former hidden lmrob.psifun(), lmrob.chifun(), lmrob.wgtfun().
	* TODO: now has an extensive section on psi/rho/chi etc

2013-03-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.9-8, released to CRAN on 2013-06-14

2013-03-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.9-7, released to CRAN on 2013-03-06

2013-03-01  Manuel Koller   <mkoller@ispm.unibe.ch>

	* R/lmrob.R (lmrob): Adding weights and offset arguments.

2013-02-26  Manuel Koller   <mkoller@ispm.unibe.ch>

	* R/lmrob.R (class lmrob): Objects of class lmrob now store
	the robustness weights in $rweights (used to be in $weights).

	* R/lmrob.R (weights.lmrob): specialized weights() function for
	lmrob objects. Returns prior weights by default. Robustness weights
	are available via the "type" argument.
