@@ -1,6 +1,7 @@
 \name{adjOutlyingness}
 \alias{adjOutlyingness}
 \title{Compute Skewness-adjusted Multivariate Outlyingness}
+\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 \description{
   For an \eqn{n \times p}{n * p} data matrix (or data frame) \code{x},
   compute the \dQuote{\emph{outlyingness}} of all \eqn{n} observations.
@@ -9,8 +10,9 @@
   medcouple, \code{\link{mc}()}.
 }
 \usage{
-adjOutlyingness(x, ndir = 250, clower = 3, cupper = 4,
-                alpha.cutoff = 0.75, coef = 1.5, qr.tol = 1e-12)
+adjOutlyingness(x, ndir = 250, clower = 4, cupper = 3,
+                alpha.cutoff = 0.75, coef = 1.5, qr.tol = 1e-12,
+                only.outlyingness = FALSE)
 }
 \arguments{
   \item{x}{a numeric \code{\link{matrix}} or \code{\link{data.frame}}.}
@@ -31,10 +33,28 @@ adjOutlyingness(x, ndir = 250, clower = 3, cupper = 4,
     \code{\link{solve.qr}} for determining the \code{ndir} directions,
     each determined by a random sample of \eqn{p} (out of \eqn{n})
     observations.}
+  \item{only.outlyingness}{logical indicating if the final outlier
+    determination should be skipped.  In that case, a vector is
+    returned, see \sQuote{Value:} below.}
 }
 \note{
  The result is \emph{random} as it depends on the sample of
  \code{ndir} directions chosen.
+
+ Till Aug/Oct. 2014, the default values for \code{clower} and \code{cupper} were
+ accidentally reversed, and the signs inside \code{exp(.)} where swapped
+ in the (now corrected) two expressions \preformatted{
+ tup <- Q3 + coef * IQR * exp(.... + clower * tmc * (tmc < 0))
+ tlo <- Q1 - coef * IQR * exp(.... - cupper * tmc * (tmc < 0))
+}
+ already in the code from Antwerpen (\file{mcrsoft/adjoutlingness.R}),
+ contrary to the published reference.
+
+ Further, the original algorithm had not been scale-equivariant in the
+ direction construction, which has been amended in 2014-10 as well.
+
+ The results, including diagnosed outliers, therefore have changed,
+ typically slightly, since \pkg{robustbase} version 0.92-0.
 }
 \details{
   \bold{FIXME}:  Details in the comment of the Matlab code;
@@ -45,10 +65,11 @@ adjOutlyingness(x, ndir = 250, clower = 3, cupper = 4,
 
   The method as described can be useful as preprocessing in
   FASTICA (\url{http://www.cis.hut.fi/projects/ica/fastica/};
-  see also the \R package \pkg{fastICA}.
+  see also the \R package \CRANpkg{fastICA}.
 }
 \value{
-  a list with components
+  If \code{only.outlyingness} is true, a vector \code{adjout},
+  otherwise, as by default, a list with components
   \item{adjout}{numeric of \code{length(n)} giving the adjusted
     outlyingness of each observation.}
   \item{cutoff}{cutoff for \dQuote{outlier} with respect to the adjusted
@@ -72,14 +93,12 @@ adjOutlyingness(x, ndir = 250, clower = 3, cupper = 4,
 \examples{
 ## An Example with bad condition number and "border case" outliers
 
-## used to fail (till when??), because of bug in adjOutl
-  dim(longley)
-  set.seed(1) ## result is random %% and there's a bug - FIXME! -- try set.seed(3)
-  ao1 <- adjOutlyingness(longley)
-  ## which are not outlying ?
-  table(ao1$nonOut)  ## all of them
-  stopifnot(all(ao1$nonOut))
-
+dim(longley)
+set.seed(1) ## result is random!
+ao1 <- adjOutlyingness(longley)
+## which are outlying ?
+which(!ao1$nonOut) ## one: "1948" - for this seed! (often: none)
+stopifnot(all(ao1$nonOut[-2]))
 
 ## An Example with outliers :
 
